Fix date error and form alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,10 @@ ul li {
   font-size: 1.25rem !important;
 }
 
+.dropdown-toggle {
+  color:black !important;
+}
+
 /* TASK CARD STYLES */
 
 .card-header:first-child {
@@ -42,4 +46,8 @@ ul li {
 
 .card-title {
   font-weight: 700;
+}
+
+.card-text:last-child {
+  font-style: italic;
 }
